# claudemuse

./: .gitignore
BuildingWithTheClaudeAPI/: 001_chunking.ipynb  001_prompt_evals_fns.ipynb  001_prompting.ipynb  001_prompting_excercise.ipynb  001_requests.ipynb  001_thinking.ipynb  001_thinking_complete.ipynb  001_tools.ipynb  (+16 more)
SreAgent/cwc-workshops/agent-decomposition/: .env.example  .gitignore  pyproject.toml  pyrightconfig.json
SreAgent/cwc-workshops/agent-decomposition/.claude/: CLAUDE.md
SreAgent/cwc-workshops/agent-decomposition/.claude/skills/forecasting/: SKILL.md  batch_days_of_cover.py  rolling_mean.py
SreAgent/cwc-workshops/agent-decomposition/.claude/skills/notify-templates/: SKILL.md
SreAgent/cwc-workshops/agent-decomposition/.claude/skills/reorder-policy/: SKILL.md
SreAgent/cwc-workshops/agent-decomposition/.claude/skills/submit-solution/: SKILL.md
SreAgent/cwc-workshops/agent-decomposition/.claude/skills/supplier-selection/: SKILL.md
SreAgent/cwc-workshops/agent-decomposition/.claude/skills/weekly-report/: SKILL.md
SreAgent/cwc-workshops/agent-decomposition/agents/: anchor.py  cli.py  cma.py  common.py  deploy_cli.py  sandbox_tools.py
SreAgent/cwc-workshops/agent-decomposition/agents/before/: prompts.py  stockpilot.py  subagents.py  tools.py
SreAgent/cwc-workshops/agent-decomposition/agents/starter/: agent.py  deploy.py  run.py
SreAgent/cwc-workshops/agent-decomposition/data/: seed.py
SreAgent/cwc-workshops/agent-decomposition/evals/: baseline_starter.json  graders.py  reference_scores.json  report.py  run.py  tasks.yaml
(+217 files in other folders)
